updated deprecations