@@ -1,11 +1,14 @@
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Scanner;
 
 import org.json.JSONObject;
 
-public class OpenWeatherMapAPI{
+public class OpenWeatherMapAPI {
     private final String API_KEY;
     private final String API_URL;
     private final JSONObject weatherData;
@@ -16,12 +19,14 @@ public class OpenWeatherMapAPI{
      * @param city the city name
      * @throws IOException if an I/O error occurs
      */
-    public OpenWeatherMapAPI(String city) throws IOException{
+    public OpenWeatherMapAPI(String city) throws IOException, URISyntaxException {
         API_KEY = "6bacb232a0f59d0ec64765b01657a03e"; // Get your API key from https://openweathermap.org/api
-        API_URL = "https://api.openweathermap.org/data/2.5/weather?q="+city+"&appid="+API_KEY+"&units=metric";
-        
-        URL weatherUrl = new URL(API_URL);
-        HttpURLConnection connection = (HttpURLConnection) weatherUrl.openConnection();
+        String encodedCity = URLEncoder.encode(city, StandardCharsets.UTF_8);
+        API_URL = "https://api.openweathermap.org/data/2.5/weather?q=" + encodedCity + "&appid=" + API_KEY
+                + "&units=metric";
+
+        URI weatherUri = new URI(API_URL);
+        HttpURLConnection connection = (HttpURLConnection) weatherUri.toURL().openConnection();
         connection.setRequestMethod("GET");
 
         if (connection.getResponseCode() != HttpURLConnection.HTTP_OK) {
@@ -34,45 +39,35 @@ public class OpenWeatherMapAPI{
         }
     }
 
-
-    public double getTemperature(){
+    public double getTemperature() {
         return weatherData.getJSONObject("main").getDouble("temp");
     }
 
-
-    public double getMinTemperature(){
+    public double getMinTemperature() {
         return weatherData.getJSONObject("main").getDouble("temp_min");
     }
 
-
-    public double getMaxTemperature(){
+    public double getMaxTemperature() {
         return weatherData.getJSONObject("main").getDouble("temp_max");
     }
 
-
-    public String getWeatherCondition(){
+    public String getWeatherCondition() {
         return weatherData.getJSONArray("weather").getJSONObject(0).getString("main");
     }
 
-
-    public double getHumidity(){
+    public double getHumidity() {
         return weatherData.getJSONObject("main").getDouble("humidity");
     }
 
-
-    public double getWindSpeed(){
+    public double getWindSpeed() {
         return weatherData.getJSONObject("wind").getDouble("speed");
     }
 
-
-    public double getWindDirection(){
+    public double getWindDirection() {
         return weatherData.getJSONObject("wind").getDouble("deg");
     }
 
-
-    public double getVisibility(){
+    public double getVisibility() {
         return weatherData.getDouble("visibility");
     }
 }
-
-
